--- a/static/index.html
+++ b/static/index.html
@@ -1,26 +1,27 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Milkmachine!</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+        <title>Milkmachine!</title>
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-	<meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width">
 
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<style>
-	body {
-	  padding-top: 60px;
-	  padding-bottom: 40px;
-	}
-	</style>
-	<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-	<link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <style>
+        body {
+          padding-top: 60px;
+          padding-bottom: 40px;
+        }
+        </style>
+        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="css/style.css">
 
-	<script src="js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
+        <script src="js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
+        <script src="js/libs/jquery-1.7.2.min.js"></script>
 </head>
 <body>
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -85,13 +86,22 @@
 
       <hr>
 
-
-
-      <footer>
-        <p>&copy; CodeMonkeys.nl 2012</p>
+      <footer><!-- added logged in here -->
+        <p id="username"></p><p>&copy; CodeMonkeys.nl 2012</p>
       </footer>
 
     </div> <!-- /container -->
+<script>
+$.getJSON("/user",
+  {
+     format: "json"
+  },
+  function(data) {
+    $.each(data, function(i,item){
+      $("#username").html("Logged in as: "+item+", you can log-out <a href='/auth/logout\'>here</a>");
+    });
+  });
+</script>
  <!-- Templates -->
 <script type="text/template" id="tpl-header">
     <button class="new btn btn-primary btn-large">New Feeding</button>
@@ -122,46 +132,46 @@
     </div>
 </script>
 
-		<!--sample template for pagination UI-->
+                <!--sample template for pagination UI-->
 
-		<script type="text/html" id="tmpClientPagination">
-		 <div class="breadcrumb">
+                <script type="text/html" id="tmpClientPagination">
+                 <div class="breadcrumb">
 
-			<span class="cell last pages">
-				<% if (currentPage != 1) { %>
-					<a href="#" class="first">First</a>
-					<a href="#" class="prev">Previous</a>
-				<% } %>
-				<% _.each (pageSet, function (p) { %>
-					<% if (currentPage == p) { %>
-						<span class="page selected"><%= p %></span>
-					<% } else { %>
-						<a href="#" class="page"><%= p %></a>
-					<% } %>
-				<% }); %>
-				<% if (lastPage != currentPage && lastPage != 0) { %>
-					<a href="#" class="next">Next</a>
-					<a href="#" class="last">Last</a>
-				<% } %>
-			</span>
+                        <span class="cell last pages">
+                                <% if (currentPage != 1) { %>
+                                        <a href="#" class="first">First</a>
+                                        <a href="#" class="prev">Previous</a>
+                                <% } %>
+                                <% _.each (pageSet, function (p) { %>
+                                        <% if (currentPage == p) { %>
+                                                <span class="page selected"><%= p %></span>
+                                        <% } else { %>
+                                                <a href="#" class="page"><%= p %></a>
+                                        <% } %>
+                                <% }); %>
+                                <% if (lastPage != currentPage && lastPage != 0) { %>
+                                        <a href="#" class="next">Next</a>
+                                        <a href="#" class="last">Last</a>
+                                <% } %>
+                        </span>
 
-			<span class="divider">/</span>
-			
-			<span class="cell first records">
-				<span class="current"><%= startRecord %></span>
-				-
-				<span class="perpage"><%= endRecord %></span>
-				of
-				<span class="total"><%= totalRecords %></span>
-							shown
-			</span>
+                        <span class="divider">/</span>
 
-		  </div>
-		</script>
+                        <span class="cell first records">
+                                <span class="current"><%= startRecord %></span>
+                                -
+                                <span class="perpage"><%= endRecord %></span>
+                                of
+                                <span class="total"><%= totalRecords %></span>
+                                                        shown
+                        </span>
+
+                  </div>
+                </script>
 
 
-		
-		<!-- scripts-->
+
+                <!-- scripts-->
 
     <!-- libs -->
     <script src="js/libs/jquery-1.7.2.min.js"></script>
@@ -172,21 +182,21 @@
     <script src="js/libs/jquery.dateFormat-1.0.js"></script>
 
     <!-- main app -->
-    <script src="app.js"></script>  
+    <script src="app.js"></script>
 
     <!-- Backbone.Paginator -->
     <script src="js/libs/backbone.paginator.js"></script>
 
-		<!--Models/Collections-->
-		<script src="models/Feeding.js"></script>
-		<script src="collections/PaginatedCollection.js"></script>
+                <!--Models/Collections-->
+                <script src="models/Feeding.js"></script>
+                <script src="collections/PaginatedCollection.js"></script>
 
-		<!--Views-->
-		<script src="views/ResultView.js"></script>
-		<script src="views/PaginationView.js"></script>
-		<script src="views/ItemView.js"></script>
+                <!--Views-->
+                <script src="views/ResultView.js"></script>
+                <script src="views/PaginationView.js"></script>
+                <script src="views/ItemView.js"></script>
     <script src="views/HeaderView.js"></script>
-		<script src="views/AppView.js"></script>
+                <script src="views/AppView.js"></script>
 
     <!-- router -->
     <script src="router/AppRouter.js"></script>
